# static-void

./: .env.example  ARCHITECTURE_STATUS.md  BRANCH_MERGE_RECOMMENDATION.md  CANONICAL_ALIAS_REPOINT_PLAN.md  CANONICAL_APP_STATUS.md  CANONICAL_ENTRYPOINTS.md  CHECKPOINT_ROUTER_MIGRATION_STATUS.md  COMPATIBILITY_SHIM_MAP.md  DEPRECATION_TARGETS_NEXT.md  DEVELOPMENT_ACCELERATORS.md  ENGINEERING_PATH_STATUS.md  FOUNDATION_STRATEGY.md  IMPLEMENTATION_NOTES.md  INVESTMENT_ANALYST_FOUNDATION.md  MERGE_CLEANUP_CHECKLIST.md  MINIMUM_COMPATIBILITY_SET.md  MVP_BACKEND_CAPABILITIES.md  NEXT_10_STEP_EXECUTION_PLAN.md  NEXT_PHASE3_PLAN.md  NEXT_PHASE_PLAN.md  OBSERVABILITY_IMPLEMENTATION_NEXT.md  OBSERVABILITY_PLAN.md  OBSERVABILITY_SURFACE_MAP.md  OBSERVED_SURFACE_CONSOLIDATION.md  PACKAGE_REFACTOR_PLAN.md  PHASE2_COMPLETION_NOTE.md  PHASE2_EXECUTION_STATUS.md  PHASE3_EXECUTION_STATUS.md  POST_MERGE_CLEANUP_PLAN.md  PREFERRED_TEST_SUITE.md  PR_CHECKPOINT.md  README.md  REFactor_wave1_start.md  ROOT_SHIM_CONVERSION_PLAN.md  ROUTER_RUNTIME_OBSERVABILITY_POSTURE.md  ROUTER_RUNTIME_STATUS.md  ROUTER_RUNTIME_TEST_POSTURE.md  ROUTER_TEST_ALIGNMENT_PLAN.md  RUNBOOK.md  RUNTIME_SURFACE_DECISIONS.md  (+226 more)
.github/workflows/: ci.yml
decision-intelligence-farm/src/: activity_log.py  ai_eval.py  ai_eval_cli.py  artifact_registry.py  automation_intelligence_audit.py  automation_intelligence_audit_cli.py  batch_executor.py  cadence_scheduler.py  checkpoint2_orchestrator.py  checkpoint2_orchestrator_cli.py  (+37 more)
docs/: runtime_cleanup_checkpoint.md
notes/: next_checkpoint.txt
scaffold/: README.md
(+25 files in other folders)
