[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-intelligence-console"
version = "0.1.0"
description = "Foundation scaffold for the Decision Intelligence Console and Shortlist shared platform."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
include = ["apps*", "packages*"]

[tool.ruff]
line-length = 100

'target-version' = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
